--- a/packages/document/docs/zh/plugin/official-plugins/shiki.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/shiki.mdx
@@ -36,7 +36,12 @@ export default defineConfig({
 该插件支持传入一个对象配置，该对象配置的属性如下：
 
 ```ts
-import type { BuiltinLanguage, BuiltinTheme, ShikiTransformer, SpecialLanguage } from 'shiki';
+import type {
+  BuiltinLanguage,
+  BuiltinTheme,
+  ShikiTransformer,
+  SpecialLanguage,
+} from 'shiki';
 
 export interface PluginShikiOptions {
   /**
