--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -94,22 +94,18 @@ export default defineConfig({
 });
 ```
 
-You can also override the built-in plugins [@rsbuild/plugin-react](https://rsbuild.dev/plugins/list/plugin-react), [@rsbuild/plugin-sass](https://rsbuild.dev/plugins/list/plugin-sass) and [@rsbuild/plugin-less](https://rsbuild.dev/plugins/list/plugin-less), and customize relevant plugin options.
+You can also override the built-in plugin [@rsbuild/plugin-react](https://rsbuild.dev/plugins/list/plugin-react) and customize the plugin options.
 
-- Example: Modify related options of built-in [@rsbuild/plugin-less](https://rsbuild.dev/plugins/list/plugin-less) plugin.
+For example:
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
-import { pluginLess } from '@rsbuild/plugin-less';
+import { pluginReact } from '@rsbuild/plugin-react';
 
 export default defineConfig({
   builderPlugins: [
-    pluginLess({
-      lessLoaderOptions: {
-        lessOptions: {
-          math: 'always',
-        },
-      },
+    pluginReact({
+      // ...options
     }),
   ],
 });
