--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -217,7 +217,7 @@ new Crawler({
             lvl3: '.rspress-doc h3',
             lvl4: '.rspress-doc h4',
             lvl5: '.rspress-doc h5',
-            lvl6: '.rspress-doc pre > code',
+            lvl6: '.rspress-doc pre > code', // 如果要搜索到代码块中的内容，增加这一行
             content: '.rspress-doc p, .rspress-doc li',
           },
           indexHeadings: true,
