--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -215,7 +215,7 @@ new Crawler({
             lvl3: '.rspress-doc h3',
             lvl4: '.rspress-doc h4',
             lvl5: '.rspress-doc h5',
-            lvl6: '.rspress-doc pre > code',
+            lvl6: '.rspress-doc pre > code', // if you want to search code blocks, add this line
             content: '.rspress-doc p, .rspress-doc li',
           },
           indexHeadings: true,
