chore: fix lint

--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -183,7 +183,7 @@ import { Search as PluginAlgoliaSearch, ZH_LOCALES } from '@rspress/plugin-algol
 />
 ```
 
-## Algolia Crawler Config
+## Algolia crawler config
 
 Here is an example config based on what this site uses:
 
