--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -185,7 +185,7 @@ import { Search as PluginAlgoliaSearch, ZH_LOCALES } from '@rspress/plugin-algol
 />
 ```
 
-## Algolia Crawler 配置
+## Algolia crawler 配置
 
 以下是一个基于本站使用的示例配置：
 
