fix: update search placeholder text to 'Search'

--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -112,7 +112,7 @@ For customizing translated text in different languages, Rspress provides the fol
 ```ts
 export const ZH_LOCALES: Locales = {
   zh: {
-    placeholder: '搜索文档',
+    placeholder: '搜索',
     translations: {
       button: {
         buttonText: '搜索',
