--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -285,7 +285,7 @@ export default defineConfig({
 ## searchPlaceholderText
 
 - Type: `string`
-- Default: `Search Docs`
+- Default: `Search`
 
 搜索框的占位符文本。比如:
 
@@ -294,7 +294,7 @@ import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   themeConfig: {
-    searchPlaceholderText: 'Search Docs',
+    searchPlaceholderText: 'Search',
   },
 });
 ```
