--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -116,7 +116,7 @@ type Locales = Record<
 ```ts
 export const ZH_LOCALES: Locales = {
   zh: {
-    placeholder: '搜索文档',
+    placeholder: '搜索',
     translations: {
       button: {
         buttonText: '搜索',
