Revert "fix: update search placeholder text to 'Search'"
This reverts commit 2c4355d4f85f2f98d07d8c0c780ec7bf459bb727.

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -299,7 +299,7 @@ export default defineConfig({
 ## searchPlaceholderText
 
 - Type: `string`
-- Default: `Search`
+- Default: `Search Docs`
 
 The placeholder text of the search box. For example:
 
@@ -308,7 +308,7 @@ import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
   themeConfig: {
-    searchPlaceholderText: 'Search',
+    searchPlaceholderText: 'Search Docs',
   },
 });
 ```
