--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -213,7 +213,7 @@ export default defineConfig({
 
 比如:
 
-````ts title="rspress.config.ts"
+```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
 
 export default defineConfig({
@@ -221,6 +221,7 @@ export default defineConfig({
     outline: false,
   },
 });
+```
 
 ## outlineTitle
 
@@ -239,7 +240,7 @@ export default defineConfig({
     outlineTitle: 'Outline',
   },
 });
-````
+```
 
 ## lastUpdated
 
