--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -1,10 +1,14 @@
 # Front matter 配置
 
+这篇文档介绍了如何使用 front matter 来配置页面的各种属性，包括标题、描述、页面类型、导航栏等。
+
+查看 [Front matter](/guide/basic/use-mdx#front-matter) 了解什么是 front matter 以及如何使用它。
+
 ## title
 
 - Type: `string`
 
-页面的标题。默认情况下，页面的 h1 标题将用作 HTML 文档的标题。但是如果你想使用不同的标题，你可以使用 Front Matter 来指定页面的标题。例如：
+页面的标题。默认情况下，页面的 h1 标题将用作 HTML 文档的标题。如果你想使用不同的标题，你可以使用 front matter 来指定页面的标题。例如：
 
 ```yaml
 ---
@@ -29,7 +33,7 @@ description: 这是我的主页
 - Type: `'home' | 'doc' | 'custom' | 'blank' | '404'`
 - Default: `'doc'`
 
-页面的类型。默认情况下，页面类型为`doc`。但是如果你想使用不同的页面类型，你可以使用`pageType`这个 Front Matter 字段来指定页面类型。例如：
+页面的类型。默认情况下，页面类型为`doc`。但是如果你想使用不同的页面类型，你可以使用 `pageType` 这个 front matter 字段来指定页面类型。例如：
 
 ```yaml
 ---
@@ -130,7 +134,7 @@ interface Hero {
 }
 ```
 
-例如，你可以使用以下 Front Matter 来指定页面的 hero config：
+例如，你可以使用以下 front matter 来指定页面的 hero config：
 
 ```yaml
 ---
@@ -225,7 +229,7 @@ features:
 
 ## sidebar
 
-是否展示左侧的目录栏。默认情况下，`doc` 页面会展示左侧的目录栏。但是如果你想隐藏左侧的目录栏，你可以使用以下 Front Matter 来配置：
+是否展示左侧的目录栏。默认情况下，`doc` 页面会展示左侧的目录栏。但是如果你想隐藏左侧的目录栏，你可以使用以下 front matter 来配置：
 
 ```yaml
 ---
@@ -245,7 +249,7 @@ outline: false
 
 ## footer
 
-是否展示文档底部的组件(如上一页/下一页)。默认情况下，`doc` 页面会展示底部的 footer。你可以通过下面的配置来隐藏 footer：
+是否展示文档底部的组件（如上一页/下一页）。默认情况下，`doc` 页面会展示底部的 footer。你可以通过下面的配置来隐藏 footer：
 
 ```yaml
 ---
@@ -255,7 +259,7 @@ footer: false
 
 ## navbar
 
-是否展示顶部导航栏。默认情况下，所有页面都会展示顶部导航栏。但是如果你想隐藏顶部导航栏，你可以使用以下 Front Matter 来配置：
+是否展示顶部导航栏。默认情况下，所有页面都会展示顶部导航栏。但是如果你想隐藏顶部导航栏，你可以使用以下 front matter 来配置：
 
 ```yaml
 ---
@@ -268,7 +272,7 @@ navbar: false
 - Type: `number[]`
 - Default: `[2]`
 
-在预览页中展示的标题级别。默认情况下，展示的标题为 h2。但是如果你想展示不同的标题级别，你可以使用 `overviewHeaders` 这个 Front Matter 字段来指定。例如：
+在预览页中展示的标题级别。默认情况下，展示的标题为 h2。但是如果你想展示不同的标题级别，你可以使用 `overviewHeaders` 这个 front matter 字段来指定。例如：
 
 ```yaml
 ---
