--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -468,8 +468,8 @@ export default defineConfig({
 
 ## ssg
 
-- Type: `boolean | { strict?: boolean }`
-- Default: `{ strict: true }`
+- Type: `boolean | { fallback?: false | 'csr' }`
+- Default: `true`
 
 Whether to enable static site generation, Rspress is enabled by default to generate CSR outputs and SSG outputs.
 
@@ -483,12 +483,12 @@ export default defineConfig({
 });
 ```
 
-If you do not strictly require SSG generation in your scenario, you can set `ssg` to `{ strict: false }`. When SSG fails, it will fallback to generate only CSR outputs.
+If you do not strictly require SSG generation in your scenario, you can set `ssg` to `{ fallback: 'csr' }`. When SSG fails, it will fallback to generate only CSR outputs.
 
 ```ts title="rspress.config.ts"
 export default {
   ssg: {
-    strict: false,
+    fallback: 'csr',
   },
 };
 ```
