Apply suggestions from code review
Co-authored-by: Timeless0911 <50201324+Timeless0911@users.noreply.github.com>

--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -471,7 +471,7 @@ export default defineConfig({
 - Type: `boolean | { fallback?: false | 'csr' }`
 - Default: `true`
 
-Whether to enable static site generation, Rspress is enabled by default to generate CSR outputs and SSG outputs.
+Whether to enable static site generation. Rspress enable it by default to generate CSR outputs and SSG outputs.
 
 If your document site is only required to be used in CSR scenarios, you can set `ssg` to `false`, and Rspress will only generate CSR outputs.
 
