--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -470,9 +470,9 @@ export default defineConfig({
 - Type: `boolean | { fallback?: false | 'csr' }`
 - Default: `true`
 
-是否开启静态站点生成，Rspress 默认开启，生成 CSR 产物和 SSG 产物。
+是否开启静态站点生成。Rspress 默认开启该功能，生成 CSR 产物和 SSG 产物。
 
-若你的文档站只要求在 CSR 场景下使用，你可以设置 `ssg` 为 `false`，此时 Rspress 会仅生成 CSR 产物。
+如果你的文档站只要求在 CSR 场景下使用，你可以设置 `ssg` 为 `false`，此时 Rspress 会仅生成 CSR 产物。
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
