--- a/e2e/fixtures/plugin-shiki/doc/index.mdx
+++ b/e2e/fixtures/plugin-shiki/doc/index.mdx
@@ -1,6 +1,8 @@
 # @rspress/plugin-shiki
 
-<!-- createTransformerDiff -->
+## transformers
+
+{/* transformerDiff */}
 
 ```ts
 export function foo() {
@@ -9,7 +11,7 @@ export function foo() {
 }
 ```
 
-<!-- createTransformerLineNumber -->
+{/* transformerLineNumber */}
 
 ```ts
 export function foo() {
@@ -17,7 +19,7 @@ export function foo() {
 }
 ```
 
-<!-- createTransformerErrorLevel -->
+{/* transformerErrorLevel */}
 
 ```ts
 export function foo() {
@@ -25,7 +27,7 @@ export function foo() {
 }
 ```
 
-<!-- createTransformerFocus -->
+{/* transformerFocus */}
 
 ```ts
 export function foo() {
