--- a/packages/document/docs/en/guide/basic/conventional-route.mdx
+++ b/packages/document/docs/en/guide/basic/conventional-route.mdx
@@ -10,7 +10,7 @@ For example, if there is a file named `foo.md` in the `docs` directory, the rout
 
 Rspress automatically scans the root directory and all subdirectories, and maps file paths to route paths. For example, if you have the following file structure:
 
-```bash
+```txt
 docs
 ├── foo
 │   └── bar.md
@@ -71,7 +71,7 @@ export default defineConfig({
 
 We recommend that you place documentation files in the `docs` directory to make your project more clear. For non-documentation content, such as custom components, util functions, etc., they can be maintained outside the `docs` directory. For example:
 
-```bash
+```txt
 docs
 └── foo.mdx
 src
