--- a/packages/document/docs/en/guide/basic/ssg.mdx
+++ b/packages/document/docs/en/guide/basic/ssg.mdx
@@ -4,7 +4,7 @@
 
 In the production build, Rspress will automatically generate a static site for you, that is, generate the HTML content of each page. After the build is completed, the HTML will appear in the default product directory, such as:
 
-```bash
+```txt
 doc_build
 ├── static # Static resources
 │   ├── main.js
