--- a/packages/document/docs/en/guide/basic/static-assets.mdx
+++ b/packages/document/docs/en/guide/basic/static-assets.mdx
@@ -119,7 +119,7 @@ On the other hand, you can also import static assets using absolute paths. In th
 
 For example, if the root directory is `docs` and the directory structure is as follows
 
-```bash
+```txt
 docs
 ├── public
 │   └── demo.png
