--- a/packages/document/docs/en/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/en/guide/default-theme/i18n.mdx
@@ -13,7 +13,7 @@ To achieve document internationalization in Rspress, you need to do the followin
 
 Create a new `i18n.json` in the current workspace, the directory structure is as follows:
 
-```bash {15}
+```txt
 .
 ├── docs
 ├── i18n.json
@@ -120,7 +120,7 @@ This is important because **for routes in the default language, Rspress will rem
 
 After the above configuration, we can start to create documents in different language versions. It is very simple. We only need to create the following structure in the document root directory:
 
-```bash
+```txt
 docs
 ├── en
 │   ├── api
