--- a/packages/document/docs/en/guide/default-theme/multi-version.mdx
+++ b/packages/document/docs/en/guide/default-theme/multi-version.mdx
@@ -23,7 +23,7 @@ Here, `default` is the default version, and `versions` is the version list.
 
 According to the version list you configured, add multi-version documents under the `docs` directory, for example:
 
-```bash
+```txt
 docs
 ├── v1
 │   ├── README.md
