--- a/packages/document/docs/en/guide/default-theme/overview-page.mdx
+++ b/packages/document/docs/en/guide/default-theme/overview-page.mdx
@@ -14,7 +14,7 @@ Generating the preview page requires the following two steps:
 
 For example, create the following directories and files
 
-```bash
+```txt
 ├── docs
 │   ├── index.md
 │   ├── api
@@ -83,7 +83,7 @@ If you want to generate a sub-preview page under `theme`, there are two ways:
 
 1. Create a new file `theme.md` with the same name in the parent directory of `theme` and configure the frontmatter of `overview: true`.
 
-```bash
+```txt
 ├── docs
 │ ├── index.md
 │ ├── api
@@ -97,7 +97,7 @@ If you want to generate a sub-preview page under `theme`, there are two ways:
 
 2. Create a new `index.md` in the `theme` directory and configure the frontmatter of `overview: true`.
 
-```bash
+```txt
 ├── docs
 │ ├── index.md
 │ ├── api
