--- a/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/typedoc.mdx
@@ -67,7 +67,7 @@ export function multi(
 
 When you start/build the project, the plugin will automatically generate an `api` directory in your document root directory. The directory structure is as follows:
 
-```bash
+```txt
 api
 ├── README.md
 ├── documentation.json
