--- a/packages/document/docs/zh/guide/basic/ssg.mdx
+++ b/packages/document/docs/zh/guide/basic/ssg.mdx
@@ -4,7 +4,7 @@
 
 在生产环境的构建中，Rspress 会自动帮你生成静态站点，即生成各个页面的 HTML 内容，在构建完成之后，HTML 会出现在默认的产物目录中，比如：
 
-```bash
+```txt
 doc_build
 ├── static # 静态资源
 │   ├── main.js
