--- a/packages/document/docs/zh/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/zh/guide/default-theme/i18n.mdx
@@ -13,7 +13,7 @@
 
 在当前工作区新建 `i18n.json`，目录结构如下：
 
-```bash {15}
+```txt
 .
 ├── docs
 ├── i18n.json
@@ -121,7 +121,7 @@ export default defineConfig({
 
 在做好上面的配置后，我们就可以开始新建不同语言版本的文档了，非常简单，我们只需要在文档根目录下新建如下的结构即可：
 
-```bash
+```txt
 docs
 ├── en
 │   ├── api
