--- a/packages/document/docs/zh/guide/default-theme/overview-page.mdx
+++ b/packages/document/docs/zh/guide/default-theme/overview-page.mdx
@@ -14,7 +14,7 @@ Rspress 内置一套预览页，效果如下:
 
 比如新建如下的目录和文件:
 
-```bash
+```txt
 ├── docs
 │   ├── index.md
 │   ├── api
@@ -83,7 +83,7 @@ This is an Overview page of our website.
 
 1. 在 `theme` 的上级目录新建一个同名文件 `theme.md`，配置 `overview: true` 的 frontmatter。
 
-```bash
+```txt
 ├── docs
 │   ├── index.md
 │   ├── api
@@ -97,7 +97,7 @@ This is an Overview page of our website.
 
 2. 在 `theme` 目录新建一个 `index.md`，配置 `overview: true` 的 frontmatter。
 
-```bash
+```txt
 ├── docs
 │   ├── index.md
 │   ├── api
