--- a/packages/document/docs/en/guide/start/getting-started.mdx
+++ b/packages/document/docs/en/guide/start/getting-started.mdx
@@ -54,7 +54,7 @@ export default defineConfig({
 
 And then create `tsconfig.json`, add the following config:
 
-```ts
+```json
 {
   "compilerOptions": {
     "target": "ES2020",
