--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -487,7 +487,7 @@ export default defineConfig({
 
 SSG requires the source code to support SSR. If the code is not compatible to SSR, the build process will fail. You can try:
 
-1. Fixed code to make it SSR-compatible.
+1. Fix code to make it SSR-compatible.
 
 2. Set `ssg: false`, but the SSG feature will be lost.
 
